--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "app.js",
     "scripts": {
+        "start": "NODE_ENV=production node ./src/server.js",
         "dev": "nodemon ./src/server.js",
         "lint": "eslint ./src"
     },
